--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.16.10"
+    "@tailwindcss/vite": "^4.0.15",
+    "astro": "^4.16.10",
+    "gsap": "^3.12.7",
+    "simplex-noise": "^4.0.3",
+    "tailwindcss": "^4.0.15",
+    "three": "^0.174.0"
   }
 }
