--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.15",
     "astro": "^4.16.10",
+    "astro-integration-lottie": "^0.3.2",
     "gsap": "^3.12.7",
+    "lottie-web": "^5.12.2",
     "simplex-noise": "^4.0.3",
     "tailwindcss": "^4.0.15",
     "three": "^0.174.0"
